--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a test directory to learn Git and Node",
   "main": "index.html",
   "scripts": {
+    "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/gulcanTeacher/Bootstrap_Co/issues"
   },
-  "homepage": "https://github.com/gulcanTeacher/Bootstrap_Co#readme"
+  "homepage": "https://github.com/gulcanTeacher/Bootstrap_Co#readme",
+  "devDependencies": {
+    "lite-server": "^2.6.1"
+  }
 }
